src/grain.css
* {
	box-sizing: border-box;
}

html, body {
	margin: 0;
	background: hsl(0, 0%, 100%);
	color: hsl(0, 0%, 10%);
	font-size: 19.89px;
}

div {
	display: inline-block;
}

body, button, div, h1, h2, h3, h4, h5, h6, img, input, li, ol, p, pre, textarea, ul, video {
	margin: 7px;
	border: none;
}

button, input, pre, textarea {
	padding: 7px;
}

h1, h2, h3, h4, h5, h6 {
	line-height: 1.3;
}

button, code, input, p, pre, textarea {
	line-height: 1.5;
}

h1 {
	font-size: 51.02112px;
}

h2 {
	font-size: 43.6078px;
}

h3 {
	font-size: 37.2716px;
}

h4 {
	font-size: 31.8561px;
}

h5 {
	font-size: 27.2274px;
}

h6 {
	font-size: 23.2713px;
}

p {
	font-size: 19.89px;
}

button, code, input, pre, textarea {
	font-size: 17px;
}

a {
	color: hsl(200, 100%, 10%);
	border-bottom: 1px solid hsl(200, 100%, 10%);
	text-decoration: none;
}

.container {
	max-width: 700px;
}

.c-m-f-1 {
	color: hsl(0, 0%, 100%);
}

.c-m-f-2 {
	color: hsl(0, 0%, 91%);
}

.c-m-f-3 {
	color: hsl(0, 0%, 10%);
}

.c-m-b-1 {
	background-color: hsl(0, 0%, 100%);
}

.c-m-b-2 {
	background-color: hsl(0, 0%, 91%);
}

.c-m-b-3 {
	background-color: hsl(0, 0%, 10%);
}

.c-r-f-1 {
	color: hsl(0, 100%, 100%);
}

.c-r-f-2 {
	color: hsl(0, 100%, 91%);
}

.c-r-f-3 {
	color: hsl(0, 100%, 10%);
}

.c-r-b-1 {
	background-color: hsl(0, 100%, 100%);
}

.c-r-b-2 {
	background-color: hsl(0, 100%, 91%);
}

.c-r-b-3 {
	background-color: hsl(0, 100%, 10%);
}

.c-y-f-1 {
	color: hsl(50, 100%, 100%);
}

.c-y-f-2 {
	color: hsl(50, 100%, 91%);
}

.c-y-f-3 {
	color: hsl(50, 100%, 10%);
}

.c-y-b-1 {
	background-color: hsl(50, 100%, 100%);
}

.c-y-b-2 {
	background-color: hsl(50, 100%, 91%);
}

.c-y-b-3 {
	background-color: hsl(50, 100%, 10%);
}

.c-g-f-1 {
	color: hsl(150, 100%, 100%);
}

.c-g-f-2 {
	color: hsl(150, 100%, 91%);
}

.c-g-f-3 {
	color: hsl(150, 100%, 10%);
}

.c-g-b-1 {
	background-color: hsl(150, 100%, 100%);
}

.c-g-b-2 {
	background-color: hsl(150, 100%, 91%);
}

.c-g-b-3 {
	background-color: hsl(150, 100%, 10%);
}

.c-b-f-1 {
	color: hsl(200, 100%, 100%);
}

.c-b-f-2 {
	color: hsl(200, 100%, 91%);
}

.c-b-f-3 {
	color: hsl(200, 100%, 10%);
}

.c-b-b-1 {
	background-color: hsl(200, 100%, 100%);
}

.c-b-b-2 {
	background-color: hsl(200, 100%, 91%);
}

.c-b-b-3 {
	background-color: hsl(200, 100%, 10%);
}

.s-1 {
	margin: 7px;
}

.s-2 {
	margin: 49px;
}

.s-3 {
	margin: 343px;
}

.w-1 {
	width: 7px;
}

.w-2 {
	width: 14px;
}

.w-3 {
	width: 21px;
}

.w-4 {
	width: 28px;
}

.w-5 {
	width: 35px;
}

.w-6 {
	width: 42px;
}

.w-7 {
	width: 49px;
}

.w-8 {
	width: 56px;
}

.w-9 {
	width: 63px;
}

.w-10 {
	width: 70px;
}

